--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       font-size: 16px;
       text-decoration: none;
       display: inline-block;
+      margin: 5px;
     }
   </style>
 </head>
@@ -61,7 +62,7 @@
 
 <!-- الشعار -->
 <div class="logo">
-  🌟 البرنامج برعاية شركة جنة – 📞 01022495795 🌟
+  🌟 البرنامج برعاية شركة جنة – 📞 01022495795 / 01096005334 🌟
 </div>
 
 <h1>منتجات جنه لاكسسوار المحمول بنبروه</h1>
@@ -91,7 +92,8 @@
         <img src="${product.image}" alt="${product.name}" />
         <div class="name">${product.name}</div>
         <div class="price">السعر: ${product.price}</div>
-        <a class="contact-btn" href="https://wa.me/201022495795?text=مرحبًا، أود طلب ${product.name} بسعر ${product.price} من موقع جنه">تواصل معنا</a>
+        <a class="contact-btn" href="https://wa.me/201022495795?text=مرحبًا، أود طلب ${product.name} بسعر ${product.price} من موقع جنه">تواصل على 01022495795</a>
+        <a class="contact-btn" href="https://wa.me/201096005334?text=مرحبًا، أود طلب ${product.name} بسعر ${product.price} من موقع جنه">تواصل على 01096005334</a>
       </div>
     `;
   });
