--- a/index.html
+++ b/index.html
@@ -12,23 +12,27 @@ body { font-family: Tahoma, sans-serif; margin:0; padding:0; background:#f9f9f9;
 header { background:#8a2be2; color:#fff; padding:25px 10px; }
 header h1 { margin:0; font-size:2.2em; font-weight:bold; }
 header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
+.top-buttons { display:flex; justify-content:center; flex-wrap:wrap; gap:10px; margin:10px 0; }
+.top-buttons button { padding:10px 15px; border:none; border-radius:8px; background:#8a2be2; color:#fff; font-weight:bold; cursor:pointer; transition:0.3s; }
+.top-buttons button:hover { opacity:0.8; }
+/* صور المنتجات */
+.image-row { display:flex; justify-content:center; margin:15px 0; flex-wrap:wrap; gap:10px; }
+.image-row img { width:120px; height:120px; border-radius:10px; object-fit:cover; border:2px solid #8a2be2; }
+/* الفورم */
 form { max-width:400px; margin:20px auto; background:#fff; padding:20px; border-radius:15px; box-shadow:0 2px 10px rgba(0,0,0,0.1); text-align:right; font-weight:bold; }
 form h3 { text-align:center; color:#8a2be2; margin-bottom:15px; }
 form input, form select { width:100%; padding:12px; margin:10px 0; border-radius:8px; border:1px solid #ccc; font-size:1em; }
 form button { width:100%; padding:12px; border:none; border-radius:10px; font-size:1.1em; font-weight:bold; cursor:pointer; color:#fff; background:#8a2be2; transition:0.3s; }
 form button:hover { background:#6a1fbf; }
+/* المودال */
 .modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); }
 .modal-content { background:#fff; margin:20% auto; padding:20px; border-radius:12px; width:90%; max-width:400px; text-align:center; }
 .modal-content h2 { color:#8a2be2; margin-bottom:15px; }
 .modal-content button { background:#8a2be2; color:#fff; padding:10px 20px; border:none; border-radius:8px; cursor:pointer; font-weight:bold; margin:5px; }
-.offers-btn { margin:20px auto; display:block; padding:15px 25px; font-size:18px; font-weight:bold; border:none; border-radius:12px; background:linear-gradient(45deg,#ff6f00,#ff1744); color:#fff; cursor:pointer; box-shadow:0 0 15px rgba(255,87,34,0.7); transition:0.3s; }
-.offers-btn:hover { opacity:0.9; }
-/* أزرار التواصل */
-.contact-btn { margin:5px; padding:10px 15px; font-size:1em; font-weight:bold; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; }
-.contact-btn:hover { opacity:0.8; }
-/* الصور الثلاثة */
-.image-row { display:flex; justify-content:center; margin:15px 0; flex-wrap:wrap; gap:10px; }
-.image-row img { width:120px; height:120px; border-radius:10px; object-fit:cover; border:2px solid #8a2be2; }
+/* أسفل الصفحة */
+.bottom-pass { margin:20px auto; max-width:400px; text-align:center; }
+.bottom-pass input { width:70%; padding:10px; border-radius:8px; border:1px solid #ccc; margin-right:5px; }
+.bottom-pass button { padding:10px 15px; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; }
 </style>
 </head>
 <body>
@@ -41,6 +45,14 @@ form button:hover { background:#6a1fbf; }
 <h2>لجميع خدمات المحمول</h2>
 </header>
 
+<!-- الأزرار الأربعة -->
+<div class="top-buttons">
+<button onclick="window.open('https://goo.gl/maps/YourMap','_blank')">📍 العنوان</button>
+<button onclick="alert('📞 01022495795\n📞 01112345678\n📞 01234567890')">📞 تواصل معنا</button>
+<button onclick="window.open('https://facebook.com/YourPage','_blank')">📘 فيسبوك</button>
+<button onclick="window.open('https://t.me/YourTelegram','_blank')">✈️ تليجرام التفعيل</button>
+</div>
+
 <!-- صور المنتجات -->
 <div class="image-row">
   <img src="image1.jpg" alt="منتج 1">
@@ -48,6 +60,7 @@ form button:hover { background:#6a1fbf; }
   <img src="image3.jpg" alt="منتج 3">
 </div>
 
+<!-- الفورم -->
 <form id="registerForm">
 <h3>📑 للحصول علي العروض قم بتسجيل بياناتك</h3>
 <input type="text" id="name" placeholder="الاسم" required>
@@ -61,6 +74,7 @@ form button:hover { background:#6a1fbf; }
 <button type="submit">🚀 سجل الان</button>
 </form>
 
+<!-- مودال النجاح -->
 <div id="successModal" class="modal">
 <div class="modal-content">
 <h2>🎉 تم التسجيل بنجاح 🎉</h2>
@@ -68,30 +82,15 @@ form button:hover { background:#6a1fbf; }
 </div>
 </div>
 
-<!-- زر المنتجات -->
-<button class="offers-btn" onclick="openPasswordModal()">🔥 المنتجات والعروض 🔥</button>
-<div id="passwordModal" class="modal">
-<div class="modal-content">
-<h2>🔑 أدخل كلمة السر</h2>
-<input type="password" id="offerPass" placeholder="كلمة السر">
-<br>
-<button onclick="checkPassword()">دخول</button>
-<button onclick="closePasswordModal()">خروج</button>
-</div>
-</div>
-
-<!-- أزرار التواصل -->
-<div style="margin:20px;">
-<button class="contact-btn" onclick="window.location.href='tel:01022495795'">📞 اتصل الآن</button>
-<button class="contact-btn" onclick="window.location.href='mailto:info@yourcompany.com'">📧 راسلنا</button>
-<button class="contact-btn" onclick="window.open('https://facebook.com/YourPage','_blank')">📘 فيسبوك</button>
-<button class="contact-btn" onclick="window.open('https://goo.gl/maps/YourMap','_blank')">📍 العنوان</button>
+<!-- مربع كلمة المرور أسفل الصفحة -->
+<div class="bottom-pass">
+<input type="text" id="userPass" placeholder="للحصول على كلمة المرور تواصل مع المندوب">
+<button onclick="alert('✅ يرجى التواصل مع المندوب لمتابعة كلمة السر')">💡 إرسال</button>
 </div>
 
 <script>
 const form = document.getElementById("registerForm");
 const modal = document.getElementById("successModal");
-const passModal = document.getElementById("passwordModal");
 
 // رابط Web App بعد نشره (تأكد من نشره كـ Anyone)
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwDjPFkAXtekIlp_Guivr53HzbIzwO2_LHRM95KhPLJpKyLftEsJz_MhmEupsJtcjJfzg/exec";
@@ -124,17 +123,6 @@ form.addEventListener("submit", e => {
 });
 
 function closeModal(){ modal.style.display = "none"; }
-function openPasswordModal(){ passModal.style.display = "block"; }
-function closePasswordModal(){ passModal.style.display = "none"; }
-function checkPassword(){
-  const pass = document.getElementById("offerPass").value;
-  if(pass === "010024"){ 
-    alert("✅ كلمة السر صحيحة - سيتم عرض المنتجات قريباً");
-    closePasswordModal();
-  } else {
-    alert("❌ كلمة السر غير صحيحة");
-  }
-}
 </script>
 
 </body>
