--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <style>
 body { font-family: Tahoma, sans-serif; margin:0; padding:0; background:#f9f9f9; text-align:center; }
 .top-bar { background:#ffd54f; color:#000; font-weight:bold; padding:8px; font-size:1em; }
-.blink { color:#8a2be2; font-size:1.3em; font-weight:bold; padding:10px; margin-bottom:10px; }
+.blink { color:#8a2be2; font-size:1.3em; font-weight:bold; padding:10px; margin-bottom:5px; }
+.free-text { color:#ff1744; font-size:1.2em; font-weight:bold; margin-bottom:15px; }
 header { background:#8a2be2; color:#fff; padding:25px 10px; }
 header h1 { margin:0; font-size:2.2em; font-weight:bold; }
 header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
@@ -37,7 +38,7 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 .modal-content h2 { color:#8a2be2; margin-bottom:15px; }
 
 /* زر المنتجات */
-.offers-btn { margin:20px auto; display:block; padding:15px 25px; font-size:18px; font-weight:bold; border:none; border-radius:12px; background:linear-gradient(45deg,#ff6f00,#ff1744); color:#fff; cursor:pointer; box-shadow:0 0 15px rgba(255,87,34,0.7); transition:0.3s; }
+.offers-btn { margin:5px; padding:12px 20px; font-size:16px; font-weight:bold; border:none; border-radius:12px; background:linear-gradient(45deg,#ff6f00,#ff1744); color:#fff; cursor:pointer; transition:0.3s; }
 .offers-btn:hover { opacity:0.9; }
 
 /* مربع كلمة السر للمنتجات */
@@ -53,6 +54,7 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 
 <div class="top-bar">🌹 اللهم صلِّ وسلم وبارك على سيدنا محمد ﷺ 🌹</div>
 <div class="blink">✨ أهلاً ومرحباً بكم في مملكة الأصليات ✨</div>
+<div class="free-text">هَنبيع ببلاش 👀</div>
 
 <header>
 <h1>شركة جنة</h1>
@@ -69,23 +71,25 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 <img src="789.jpg" alt="صورة 3">
 </div>
 
-<!-- أزرار أعلى الصفحة -->
+<!-- أزرار أعلى الصفحة مع زر المنتجات -->
 <div class="top-buttons">
 <button onclick="showDetails('العنوان: المنصورة - نبروه سوق المحمول')">🏠 العنوان</button>
 <button onclick="showDetails('تواصل معنا:\n01022495795\n01067070423\n01012253500')">📞 تواصل معنا</button>
 <button onclick="window.open('https://www.facebook.com/share/174s1yLKfA/?mibextid=wwXIfr','_blank')">📘 فيسبوك</button>
 <button onclick="showDetails('✈️ التفعيلات')">✈️ التفعيلات</button>
+<button class="offers-btn" onclick="showPasswordBox()">🔥 المنتجات والعروض 🔥</button>
 </div>
 
 <!-- مربع تفاصيل الأزرار داخل الصفحة -->
 <div class="details-box" id="detailsBox"></div>
 
-<!-- نموذج التسجيل -->
+<!-- نموذج التسجيل مع خانة الصنف -->
 <div class="form-container">
 <h3>📑 للحصول علي العروض قم بتسجيل بياناتك</h3>
 <input type="text" id="name" placeholder="الاسم" required>
 <input type="tel" id="phone" placeholder="رقم الموبايل" pattern="^01[0-2,5]{1}[0-9]{8}$" required>
 <input type="text" id="address" placeholder="العنوان" required>
+<input type="text" id="item" placeholder="الصنف" required>
 <select id="field" required>
   <option value="">اختر المجال</option>
   <option value="داخلي">داخلي</option>
@@ -101,9 +105,6 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 <button onclick="closeModal()">إغلاق</button>
 </div>
 </div>
-
-<!-- زر المنتجات -->
-<button class="offers-btn" onclick="showPasswordBox()">🔥 المنتجات والعروض 🔥</button>
 
 <!-- مربع كلمة السر -->
 <div class="password-box" id="passwordBox">
@@ -122,73 +123,8 @@ const passwordBox = document.getElementById("passwordBox");
 const detailsBox = document.getElementById("detailsBox");
 
 // رابط Web App بعد نشره
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzdMtvyPabYsfKRsaYOCH9BrIHsxlRQZW6oEvtFvYlebC5tth6ECssXOHNXOZYCWq6MyQ/exec";
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwDjPFkAXtekIlp_Guivr53HzbIzwO2_LHRM95KhPLJpKyLftEsJz_MhmEupsJtcjJfzg/exec";
 
 submitBtn.addEventListener("click", async (e)=>{
     e.preventDefault();
-    submitBtn.disabled = true;
-    submitBtn.textContent='جارٍ الإرسال...';
-
-    const data = {
-        name: document.getElementById("name").value.trim(),
-        phone: document.getElementById("phone").value.trim(),
-        address: document.getElementById("address").value.trim(),
-        field: document.getElementById("field").value
-    };
-
-    const phonePattern = /^01[0-2,5][0-9]{8}$/;
-    if(!phonePattern.test(data.phone)){
-        alert('من فضلك أدخل رقم موبايل مصري صحيح');
-        submitBtn.disabled=false;
-        submitBtn.textContent='🚀 سجل الان';
-        return;
-    }
-
-    const params = new URLSearchParams();
-    for(let key in data) params.append(key,data[key]);
-
-    try{
-        const res = await fetch(SCRIPT_URL,{method:'POST', body: params});
-        const text = await res.text();
-        let resp={};
-        try{ resp=JSON.parse(text); } catch(e){ resp={result:'error',message:text}; }
-        if(resp.result==='success'){
-            modal.style.display='flex';
-            document.getElementById("name").value='';
-            document.getElementById("phone").value='';
-            document.getElementById("address").value='';
-            document.getElementById("field").value='';
-        } else {
-            alert('❌ حدث خطأ: '+(resp.message||'خطأ غير معروف'));
-        }
-    } catch(err){
-        alert('❌ خطأ في الاتصال: '+err.message+'\nراجع نشر الـ Web App والصلاحيات.');
-    } finally {
-        submitBtn.disabled=false;
-        submitBtn.textContent='🚀 سجل الان';
-    }
-});
-
-// تفاصيل الأزرار داخل الصفحة
-function showDetails(text){
-    detailsBox.innerText = text;
-    detailsBox.style.display = 'block';
-}
-
-// المربع كلمة السر للمنتجات
-function showPasswordBox(){ passwordBox.style.display='block'; detailsBox.style.display='none'; }
-function hidePasswordBox(){ passwordBox.style.display='none'; }
-function checkOfferPass(){
-    const pass=document.getElementById("offerPass").value;
-    if(pass==="010024"){
-        alert("✅ كلمة السر صحيحة، سيتم عرض المنتجات قريباً");
-    } else {
-        alert("❌ كلمة السر غير صحيحة");
-    }
-}
-
-function closeModal(){ modal.style.display='none'; }
-</script>
-
-</body>
-</html>
+    submit
