--- a/index.html
+++ b/index.html
@@ -7,83 +7,65 @@
 <style>
 body { font-family: Tahoma, sans-serif; margin:0; padding:0; background:#f9f9f9; text-align:center; }
 .top-bar { background:#ffd54f; color:#000; font-weight:bold; padding:8px; font-size:1em; }
-.blink { color:#8a2be2; font-size:1.3em; font-weight:bold; padding:10px; margin-bottom:5px; }
-.free-text { color:#ff1744; font-size:1.2em; font-weight:bold; margin-bottom:15px; }
+.blink { color:#8a2be2; font-size:1.3em; font-weight:bold; padding:10px; }
 header { background:#8a2be2; color:#fff; padding:25px 10px; }
 header h1 { margin:0; font-size:2.2em; font-weight:bold; }
 header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
-
-/* صور فوق الأزرار */
-.top-images { display:flex; justify-content:center; margin:15px 0; }
-.top-images img { width:30%; margin:0 5px; border-radius:10px; }
-
-/* أزرار أعلى الصفحة */
-.top-buttons { display:flex; flex-wrap:wrap; justify-content:center; margin:15px 0; }
-.top-buttons button { margin:5px; padding:10px 15px; font-size:1em; font-weight:bold; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; }
-.top-buttons button:hover { opacity:0.8; }
-
-/* تفاصيل الأزرار داخل الصفحة */
-.details-box { display:none; margin:10px auto; max-width:400px; background:#fff; padding:15px; border-radius:12px; box-shadow:0 2px 10px rgba(0,0,0,0.1); text-align:right; font-weight:bold; }
-
-/* نموذج التسجيل */
+.header-sub { margin:5px 0; font-size:1.2em; color:#ffd54f; font-weight:bold; }
 .form-container { max-width:400px; margin:20px auto; background:#fff; padding:20px; border-radius:15px; box-shadow:0 2px 10px rgba(0,0,0,0.1); text-align:right; font-weight:bold; }
 .form-container h3 { text-align:center; color:#8a2be2; margin-bottom:15px; }
 .form-container input, .form-container select { width:100%; padding:12px; margin:10px 0; border-radius:8px; border:1px solid #ccc; font-size:1em; }
 .form-container button { width:100%; padding:12px; border:none; border-radius:10px; font-size:1.1em; font-weight:bold; cursor:pointer; color:#fff; background:#8a2be2; transition:0.3s; }
 .form-container button:hover { background:#6a1fbf; }
-
-/* نجاح التسجيل */
-.modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); align-items:center; justify-content:center; }
-.modal-content { background:#fff; margin:20% auto; padding:20px; border-radius:12px; width:90%; max-width:400px; text-align:center; }
-.modal-content h2 { color:#8a2be2; margin-bottom:15px; }
-
-/* زر المنتجات */
-.offers-btn { margin:5px; padding:12px 20px; font-size:16px; font-weight:bold; border:none; border-radius:12px; background:linear-gradient(45deg,#ff6f00,#ff1744); color:#fff; cursor:pointer; transition:0.3s; }
+.modal, .password-modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); align-items:center; justify-content:center; }
+.modal-content, .password-content { background:#fff; margin:20% auto; padding:20px; border-radius:12px; width:90%; max-width:400px; text-align:center; }
+.modal-content h2, .password-content h2 { color:#8a2be2; margin-bottom:15px; }
+.top-buttons { display:flex; flex-wrap:wrap; justify-content:center; margin:15px 0; }
+.top-buttons button { margin:5px; padding:10px 15px; font-size:1em; font-weight:bold; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; }
+.top-buttons button:hover { opacity:0.8; }
+.offers-btn { margin:20px auto; display:block; padding:15px 25px; font-size:18px; font-weight:bold; border:none; border-radius:12px; background:linear-gradient(45deg,#ff6f00,#ff1744); color:#fff; cursor:pointer; box-shadow:0 0 15px rgba(255,87,34,0.7); transition:0.3s; }
 .offers-btn:hover { opacity:0.9; }
-
-/* مربع كلمة السر للمنتجات */
-.password-box { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#fff; padding:20px; border-radius:15px; box-shadow:0 2px 15px rgba(0,0,0,0.3); z-index:1001; width:90%; max-width:400px; text-align:center; }
-.password-box input { width:70%; padding:10px; margin:10px 0; border-radius:8px; border:1px solid #ccc; }
-.password-box button { padding:10px 15px; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; margin-top:5px; }
-
-/* زر الدعم الفني */
-.support-btn { position:fixed; top:10px; left:10px; background:#ff5722; color:#fff; padding:10px 12px; border-radius:50%; font-weight:bold; cursor:pointer; z-index:1002; }
+.images-top { display:flex; justify-content:center; margin:15px 0; gap:10px; }
+.images-top img { width:120px; height:auto; border-radius:8px; }
+.password-box { max-width:400px; margin:20px auto; text-align:center; font-weight:bold; }
+.password-box input { width:60%; padding:10px; margin:5px 5px 0 0; border-radius:8px; border:1px solid #ccc; }
+.password-box button { padding:10px 15px; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; }
+.support-btn { position:fixed; top:10px; left:10px; border-radius:50%; width:50px; height:50px; background:#8a2be2; color:#fff; font-weight:bold; cursor:pointer; z-index:999; }
 </style>
 </head>
 <body>
 
 <div class="top-bar">🌹 اللهم صلِّ وسلم وبارك على سيدنا محمد ﷺ 🌹</div>
 <div class="blink">✨ أهلاً ومرحباً بكم في مملكة الأصليات ✨</div>
-<div class="free-text">هَنبيع ببلاش 👀</div>
+<div class="header-sub">هَنبيع ببلاش 👀</div>
 
 <header>
 <h1>شركة جنة</h1>
 <h2>لجميع خدمات المحمول</h2>
 </header>
 
-<!-- زر الدعم الفني -->
-<button class="support-btn" onclick="window.open('https://wa.me/201022495795','_blank')">دعم</button>
-
 <!-- صور فوق الأزرار -->
-<div class="top-images">
+<div class="images-top">
 <img src="123.jpg" alt="صورة 1">
 <img src="456.jpg" alt="صورة 2">
 <img src="789.jpg" alt="صورة 3">
 </div>
 
-<!-- أزرار أعلى الصفحة مع زر المنتجات -->
+<!-- أزرار أعلى الصفحة -->
 <div class="top-buttons">
 <button onclick="showDetails('العنوان: المنصورة - نبروه سوق المحمول')">🏠 العنوان</button>
-<button onclick="showDetails('تواصل معنا:\n01022495795\n01067070423\n01012253500')">📞 تواصل معنا</button>
+<button onclick="showDetails('تواصل معنا:\n1-01022495795\n2-01067070423\n3-01012253500')">📞 تواصل معنا</button>
 <button onclick="window.open('https://www.facebook.com/share/174s1yLKfA/?mibextid=wwXIfr','_blank')">📘 فيسبوك</button>
-<button onclick="showDetails('✈️ التفعيلات')">✈️ التفعيلات</button>
-<button class="offers-btn" onclick="showPasswordBox()">🔥 المنتجات والعروض 🔥</button>
+<button onclick="showDetails('التفعيلات الخاصة')">✈️ التفعيلات</button>
 </div>
 
-<!-- مربع تفاصيل الأزرار داخل الصفحة -->
-<div class="details-box" id="detailsBox"></div>
+<!-- تفاصيل الأزرار داخل الصفحة -->
+<div id="detailsBox" style="margin:15px; text-align:right; white-space:pre-wrap; font-weight:bold;"></div>
 
-<!-- نموذج التسجيل مع خانة الصنف -->
+<!-- زر المنتجات -->
+<button class="offers-btn" onclick="showPasswordModal()">🔥 المنتجات والعروض 🔥</button>
+
+<!-- نموذج التسجيل -->
 <div class="form-container">
 <h3>📑 للحصول علي العروض قم بتسجيل بياناتك</h3>
 <input type="text" id="name" placeholder="الاسم" required>
@@ -107,24 +89,89 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 </div>
 
 <!-- مربع كلمة السر -->
-<div class="password-box" id="passwordBox">
-<h3>🔒 إدخل كلمة السر للوصول للمنتجات</h3>
-<input type="password" id="offerPass" placeholder="ادخل كلمة السر">
-<br>
-<button onclick="checkOfferPass()">🔑 دخول</button>
-<p style="margin-top:10px; font-size:0.9em;">إذا أردت كلمة السر الخاصة بك، تواصل مع المندوب المتابع معك</p>
-<button onclick="hidePasswordBox()" style="margin-top:10px; background:#ff5722;">🔙 رجوع للقائمة</button>
+<div id="passwordModal" class="password-modal">
+<div class="password-content">
+<h2>🔑 أدخل كلمة السر</h2>
+<input type="password" id="offerPass" placeholder="كلمة السر">
+<br><br>
+<div>إذا أردت كلمة السر الخاصه بك، تواصل مع المندوب المتابع معك.</div>
+<button onclick="verifyPassword()">🔑 تحقق</button>
+<button onclick="closePasswordModal()">🔙 رجوع</button>
+</div>
 </div>
 
+<!-- دعم فني -->
+<button class="support-btn" onclick="window.open('https://wa.me/201022495795','_blank')">الدعم</button>
+
 <script>
+const detailsBox = document.getElementById('detailsBox');
+function showDetails(text){ detailsBox.textContent = text; }
+
+// زر المنتجات
+function showPasswordModal(){ document.getElementById('passwordModal').style.display='flex'; }
+function closePasswordModal(){ document.getElementById('passwordModal').style.display='none'; }
+
+function verifyPassword(){
+  const pass = document.getElementById('offerPass').value;
+  if(pass === '010024'){
+    alert('✅ كلمة السر صحيحة - سيتم عرض المنتجات قريباً');
+    closePasswordModal();
+  } else {
+    alert('❌ كلمة السر غير صحيحة');
+  }
+}
+
+// نموذج التسجيل
 const submitBtn = document.getElementById("submitBtn");
 const modal = document.getElementById("successModal");
-const passwordBox = document.getElementById("passwordBox");
-const detailsBox = document.getElementById("detailsBox");
-
-// رابط Web App بعد نشره
 const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwDjPFkAXtekIlp_Guivr53HzbIzwO2_LHRM95KhPLJpKyLftEsJz_MhmEupsJtcjJfzg/exec";
 
 submitBtn.addEventListener("click", async (e)=>{
-    e.preventDefault();
-    submit
+  e.preventDefault();
+  submitBtn.disabled=true; submitBtn.textContent='جارٍ الإرسال...';
+
+  const data = {
+    name: document.getElementById("name").value.trim(),
+    phone: document.getElementById("phone").value.trim(),
+    address: document.getElementById("address").value.trim(),
+    item: document.getElementById("item").value.trim(),
+    field: document.getElementById("field").value
+  };
+
+  const phonePattern = /^01[0-2,5][0-9]{8}$/;
+  if(!phonePattern.test(data.phone)){
+    alert('من فضلك أدخل رقم موبايل مصري صحيح (مثال: 01012345678)');
+    submitBtn.disabled=false; submitBtn.textContent='🚀 سجل الان'; return;
+  }
+
+  const params = new URLSearchParams();
+  for(let key in data) params.append(key,data[key]);
+
+  try{
+    const res = await fetch(SCRIPT_URL, {method:'POST', body:params});
+    const text = await res.text();
+    let resp={};
+    try{ resp=JSON.parse(text); }catch(e){ resp={result:'error', message:text}; }
+    if(resp.result==='success'){
+      modal.style.display='flex';
+      document.getElementById("name").value='';
+      document.getElementById("phone").value='';
+      document.getElementById("address").value='';
+      document.getElementById("item").value='';
+      document.getElementById("field").value='';
+    } else {
+      alert('❌ حدث خطأ: '+(resp.message||'خطأ غير معروف'));
+    }
+  }catch(err){
+    alert('❌ خطأ في الاتصال: '+err.message+'\nراجع نشر الـ Web App والصلاحيات.');
+  } finally {
+    submitBtn.disabled=false; submitBtn.textContent='🚀 سجل الان';
+  }
+});
+
+function closeModal(){ modal.style.display='none'; }
+</script>
+
+</body>
+</html>
+
