--- a/index.html
+++ b/index.html
@@ -5,47 +5,60 @@
 <title>مملكة الأصليات - شركة جنة</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-body { font-family: Tahoma, sans-serif; margin:0; padding:0; background:#f9f9f9; text-align:center; }
+body { font-family: Tahoma; margin:0; padding:0; background:#f9f9f9; text-align:center; }
 .top-bar { background:#ffd54f; color:#000; font-weight:bold; padding:8px; font-size:1em; }
 .blink { color:#8a2be2; font-size:1.3em; font-weight:bold; padding:10px; }
 header { background:#8a2be2; color:#fff; padding:25px 10px; }
 header h1 { margin:0; font-size:2.2em; font-weight:bold; }
 header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
-.header-sub { margin:5px 0; font-size:1.2em; color:#ffd54f; font-weight:bold; }
+
+/* الصور */
+.top-images { display:flex; justify-content:center; gap:10px; margin:15px 0; }
+.top-images img { width:120px; height:auto; border-radius:10px; }
+
+/* أزرار أعلى الصفحة */
+.top-buttons { display:flex; flex-wrap:wrap; justify-content:center; margin:15px 0; gap:10px; }
+.top-buttons button { padding:12px 18px; font-size:1em; font-weight:bold; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; transition:0.3s; }
+.top-buttons button:hover { background:#6a1fbf; transform:scale(1.05); }
+
+/* مربع المعلومات */
+.info-box { display:none; background:#fff; margin:15px auto; padding:20px; border-radius:12px; max-width:400px; text-align:center; box-shadow:0 2px 10px rgba(0,0,0,0.2); }
+
+/* نموذج التسجيل */
 .form-container { max-width:400px; margin:20px auto; background:#fff; padding:20px; border-radius:15px; box-shadow:0 2px 10px rgba(0,0,0,0.1); text-align:right; font-weight:bold; }
 .form-container h3 { text-align:center; color:#8a2be2; margin-bottom:15px; }
 .form-container input, .form-container select { width:100%; padding:12px; margin:10px 0; border-radius:8px; border:1px solid #ccc; font-size:1em; }
 .form-container button { width:100%; padding:12px; border:none; border-radius:10px; font-size:1.1em; font-weight:bold; cursor:pointer; color:#fff; background:#8a2be2; transition:0.3s; }
-.form-container button:hover { background:#6a1fbf; }
-.modal, .password-modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); align-items:center; justify-content:center; }
-.modal-content, .password-content { background:#fff; margin:20% auto; padding:20px; border-radius:12px; width:90%; max-width:400px; text-align:center; }
-.modal-content h2, .password-content h2 { color:#8a2be2; margin-bottom:15px; }
-.top-buttons { display:flex; flex-wrap:wrap; justify-content:center; margin:15px 0; }
-.top-buttons button { margin:5px; padding:10px 15px; font-size:1em; font-weight:bold; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; }
-.top-buttons button:hover { opacity:0.8; }
-.offers-btn { margin:20px auto; display:block; padding:15px 25px; font-size:18px; font-weight:bold; border:none; border-radius:12px; background:linear-gradient(45deg,#ff6f00,#ff1744); color:#fff; cursor:pointer; box-shadow:0 0 15px rgba(255,87,34,0.7); transition:0.3s; }
-.offers-btn:hover { opacity:0.9; }
-.images-top { display:flex; justify-content:center; margin:15px 0; gap:10px; }
-.images-top img { width:120px; height:auto; border-radius:8px; }
-.password-box { max-width:400px; margin:20px auto; text-align:center; font-weight:bold; }
-.password-box input { width:60%; padding:10px; margin:5px 5px 0 0; border-radius:8px; border:1px solid #ccc; }
-.password-box button { padding:10px 15px; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; }
-.support-btn { position:fixed; top:10px; left:10px; border-radius:50%; width:50px; height:50px; background:#8a2be2; color:#fff; font-weight:bold; cursor:pointer; z-index:999; }
+.form-container button:hover { background:#6a1fbf; transform:scale(1.02); }
+
+/* مودال نجاح التسجيل */
+.modal { display:none; position:fixed; z-index:1000; left:0; top:0; width:100%; height:100%; background:rgba(0,0,0,0.6); align-items:center; justify-content:center; }
+.modal-content { background:#fff; padding:20px; border-radius:12px; width:90%; max-width:400px; text-align:center; }
+.modal-content h2 { color:#8a2be2; margin-bottom:15px; }
+
+/* مربع كلمة السر يظهر على الصفحة */
+.password-box { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#fff; padding:25px; border-radius:12px; max-width:400px; width:90%; box-shadow:0 2px 15px rgba(0,0,0,0.3); text-align:center; z-index:1001; font-weight:bold; }
+.password-box input { width:70%; padding:10px; margin:10px 0; border-radius:8px; border:1px solid #ccc; }
+.password-box button { padding:10px 15px; margin:5px; border:none; border-radius:8px; background:#8a2be2; color:#fff; cursor:pointer; font-weight:bold; }
+
+/* زر الدعم الفني */
+.support-btn { position:fixed; top:10px; left:10px; padding:10px 15px; border-radius:50%; background:#ff5722; color:#fff; font-weight:bold; cursor:pointer; box-shadow:0 2px 5px rgba(0,0,0,0.3); transition:0.3s; }
+.support-btn:hover { background:#e64a19; transform:scale(1.1); }
+
 </style>
 </head>
 <body>
 
 <div class="top-bar">🌹 اللهم صلِّ وسلم وبارك على سيدنا محمد ﷺ 🌹</div>
-<div class="blink">✨ أهلاً ومرحباً بكم في مملكة الأصليات ✨</div>
-<div class="header-sub">هَنبيع ببلاش 👀</div>
+<div class="blink">✨ أهلاً ومرحباً بكم في مملكة الأصليات /هنبيع ببلاش واكن الصنف مجاش✨</div>
 
 <header>
 <h1>شركة جنة</h1>
 <h2>لجميع خدمات المحمول</h2>
 </header>
 
-<!-- صور فوق الأزرار -->
-<div class="images-top">
+<!-- صور أعلى -->
+<div class="top-images">
 <img src="123.jpg" alt="صورة 1">
 <img src="456.jpg" alt="صورة 2">
 <img src="789.jpg" alt="صورة 3">
@@ -53,25 +66,25 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 
 <!-- أزرار أعلى الصفحة -->
 <div class="top-buttons">
-<button onclick="showDetails('العنوان: المنصورة - نبروه سوق المحمول')">🏠 العنوان</button>
-<button onclick="showDetails('تواصل معنا:\n1-01022495795\n2-01067070423\n3-01012253500')">📞 تواصل معنا</button>
+<button onclick="showInfo('العنوان:<br>المنصورة - نبروه سوق المحمول')">🏠 العنوان</button>
+<button onclick="showInfo('تواصل معنا:<br>01022495795<br>01067070423<br>01012253500')">📞 تواصل معنا</button>
 <button onclick="window.open('https://www.facebook.com/share/174s1yLKfA/?mibextid=wwXIfr','_blank')">📘 فيسبوك</button>
-<button onclick="showDetails('التفعيلات الخاصة')">✈️ التفعيلات</button>
+<button onclick="showPasswordBox()">🔥 المنتجات والعروض</button>
 </div>
 
-<!-- تفاصيل الأزرار داخل الصفحة -->
-<div id="detailsBox" style="margin:15px; text-align:right; white-space:pre-wrap; font-weight:bold;"></div>
-
-<!-- زر المنتجات -->
-<button class="offers-btn" onclick="showPasswordModal()">🔥 المنتجات والعروض 🔥</button>
+<!-- مربع المعلومات -->
+<div id="infoBox" class="info-box">
+<h2>تفاصيل</h2>
+<p id="infoText" style="line-height:1.6;"></p>
+<button onclick="closeInfo()">رجوع</button>
+</div>
 
 <!-- نموذج التسجيل -->
 <div class="form-container">
-<h3>📑 للحصول علي العروض قم بتسجيل بياناتك</h3>
-<input type="text" id="name" placeholder="الاسم" required>
-<input type="tel" id="phone" placeholder="رقم الموبايل" pattern="^01[0-2,5]{1}[0-9]{8}$" required>
+<h3>📑 لتلقي العروض قم بتسجيل بياناتك</h3>
+<input type="text" id="name" placeholder="الاسم أو اسم المحل" required>
+<input type="tel" id="phone" placeholder="رقم الموبايل" required>
 <input type="text" id="address" placeholder="العنوان" required>
-<input type="text" id="item" placeholder="الصنف" required>
 <select id="field" required>
   <option value="">اختر المجال</option>
   <option value="داخلي">داخلي</option>
@@ -89,89 +102,87 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 </div>
 
 <!-- مربع كلمة السر -->
-<div id="passwordModal" class="password-modal">
-<div class="password-content">
+<div id="passwordBox" class="password-box">
 <h2>🔑 أدخل كلمة السر</h2>
 <input type="password" id="offerPass" placeholder="كلمة السر">
-<br><br>
-<div>إذا أردت كلمة السر الخاصه بك، تواصل مع المندوب المتابع معك.</div>
-<button onclick="verifyPassword()">🔑 تحقق</button>
-<button onclick="closePasswordModal()">🔙 رجوع</button>
-</div>
+<div style="margin:10px 0;">إذا أردت كلمة السر الخاصه بك، تواصل مع المندوب الخاص بك</div>
+<button onclick="checkPassword()">دخول</button>
+<button onclick="closePasswordBox()">رجوع</button>
 </div>
 
-<!-- دعم فني -->
-<button class="support-btn" onclick="window.open('https://wa.me/201022495795','_blank')">الدعم</button>
+<!-- زر الدعم الفني -->
+<button class="support-btn" onclick="window.open('https://wa.me/201022495795','_blank')">الدعم الفني</button>
 
 <script>
-const detailsBox = document.getElementById('detailsBox');
-function showDetails(text){ detailsBox.textContent = text; }
+const infoBox = document.getElementById('infoBox');
+const infoText = document.getElementById('infoText');
+const passwordBox = document.getElementById('passwordBox');
+const submitBtn = document.getElementById("submitBtn");
+const successModal = document.getElementById("successModal");
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbw_Yc2ii6bu0iLOJEt0iXwnNjzZFLo0djFODlZIDORzWrVopf653DuJmvywGIbZa3PYJA/exec";
 
-// زر المنتجات
-function showPasswordModal(){ document.getElementById('passwordModal').style.display='flex'; }
-function closePasswordModal(){ document.getElementById('passwordModal').style.display='none'; }
+// عرض التفاصيل داخل الصفحة
+function showInfo(text){
+  infoText.innerHTML = text;
+  infoBox.style.display = 'block';
+}
+function closeInfo(){ infoBox.style.display = 'none'; }
 
-function verifyPassword(){
-  const pass = document.getElementById('offerPass').value;
-  if(pass === '010024'){
-    alert('✅ كلمة السر صحيحة - سيتم عرض المنتجات قريباً');
-    closePasswordModal();
-  } else {
-    alert('❌ كلمة السر غير صحيحة');
-  }
+// عرض مربع كلمة السر أمام العميل
+function showPasswordBox(){ passwordBox.style.display='block'; }
+function closePasswordBox(){ passwordBox.style.display='none'; }
+
+function checkPassword(){
+  const pass = document.getElementById("offerPass").value;
+  if(pass === "010024"){
+    alert("✅ كلمة السر صحيحة - سيتم عرض المنتجات قريباً");
+    closePasswordBox();
+  } else alert("❌ كلمة السر غير صحيحة");
 }
 
-// نموذج التسجيل
-const submitBtn = document.getElementById("submitBtn");
-const modal = document.getElementById("successModal");
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwDjPFkAXtekIlp_Guivr53HzbIzwO2_LHRM95KhPLJpKyLftEsJz_MhmEupsJtcjJfzg/exec";
-
+// تسجيل البيانات للشيت مع التحقق من الحقول
 submitBtn.addEventListener("click", async (e)=>{
   e.preventDefault();
-  submitBtn.disabled=true; submitBtn.textContent='جارٍ الإرسال...';
+  const nameVal = document.getElementById("name").value.trim();
+  const phoneVal = document.getElementById("phone").value.trim();
+  const addressVal = document.getElementById("address").value.trim();
+  const fieldVal = document.getElementById("field").value;
 
-  const data = {
-    name: document.getElementById("name").value.trim(),
-    phone: document.getElementById("phone").value.trim(),
-    address: document.getElementById("address").value.trim(),
-    item: document.getElementById("item").value.trim(),
-    field: document.getElementById("field").value
-  };
+  if(!nameVal){ alert("الرجاء إدخال الاسم أو اسم المحل"); return; }
+  if(!phoneVal){ alert("الرجاء إدخال رقم الموبايل"); return; }
+  if(!addressVal){ alert("الرجاء إدخال العنوان"); return; }
+  if(!fieldVal){ alert("الرجاء اختيار المجال"); return; }
 
+  submitBtn.disabled=true;
+  submitBtn.textContent='جارٍ الإرسال...';
+
+  const data = { name:nameVal, phone:phoneVal, address:addressVal, field:fieldVal };
   const phonePattern = /^01[0-2,5][0-9]{8}$/;
-  if(!phonePattern.test(data.phone)){
-    alert('من فضلك أدخل رقم موبايل مصري صحيح (مثال: 01012345678)');
-    submitBtn.disabled=false; submitBtn.textContent='🚀 سجل الان'; return;
-  }
+  if (!phonePattern.test(data.phone)) { alert('من فضلك أدخل رقم موبايل مصري صحيح'); submitBtn.disabled=false; submitBtn.textContent='🚀 سجل الان'; return; }
 
   const params = new URLSearchParams();
-  for(let key in data) params.append(key,data[key]);
+  for (let key in data) params.append(key,data[key]);
 
   try{
-    const res = await fetch(SCRIPT_URL, {method:'POST', body:params});
-    const text = await res.text();
-    let resp={};
-    try{ resp=JSON.parse(text); }catch(e){ resp={result:'error', message:text}; }
-    if(resp.result==='success'){
-      modal.style.display='flex';
-      document.getElementById("name").value='';
-      document.getElementById("phone").value='';
-      document.getElementById("address").value='';
-      document.getElementById("item").value='';
-      document.getElementById("field").value='';
-    } else {
-      alert('❌ حدث خطأ: '+(resp.message||'خطأ غير معروف'));
-    }
+    fetch(SCRIPT_URL,{ method:'POST', body:params })
+    .then(res=>res.text())
+    .then(text=>{
+      let resp={};
+      try{ resp=JSON.parse(text); } catch(e){ resp={result:'error', message:text}; }
+      if(resp.result==="success"){ successModal.style.display='flex'; document.getElementById("name").value=''; document.getElementById("phone").value=''; document.getElementById("address").value=''; document.getElementById("field").value=''; }
+      else alert('❌ حدث خطأ: '+(resp.message||'خطأ غير معروف'));
+    })
+    .catch(err=>alert('❌ خطأ في الاتصال: '+err.message))
+    .finally(()=>{ submitBtn.disabled=false; submitBtn.textContent='🚀 سجل الان'; });
   }catch(err){
-    alert('❌ خطأ في الاتصال: '+err.message+'\nراجع نشر الـ Web App والصلاحيات.');
-  } finally {
-    submitBtn.disabled=false; submitBtn.textContent='🚀 سجل الان';
+    alert('❌ خطأ غير متوقع: '+err.message);
+    submitBtn.disabled=false;
+    submitBtn.textContent='🚀 سجل الان';
   }
 });
 
-function closeModal(){ modal.style.display='none'; }
+function closeModal(){ successModal.style.display='none'; }
 </script>
 
 </body>
 </html>
-
