--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 <body>
 
 <div class="top-bar">🌹 اللهم صلِّ وسلم وبارك على سيدنا محمد ﷺ 🌹</div>
-<div class="blink">✨ أهلاً ومرحباً بكم في مملكة الأصليات /هنبيع ببلاش واكن الصنف مجاش✨</div>
+<div class="blink">✨ أهلاً ومرحباً بكم في مملكة الأصليات 
+  /هنبيع ببلاش واكن الصنف مجاش✨</div>
 
 <header>
 <h1>شركة جنة</h1>
@@ -103,7 +104,7 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 
 <!-- مربع كلمة السر -->
 <div id="passwordBox" class="password-box">
-<h2>🔑 أدخل كلمة السر</h2>
+<h2>ادخل كلمه السر لمشاهده الاسعار والمنتجات 🔑</h2>
 <input type="password" id="offerPass" placeholder="كلمة السر">
 <div style="margin:10px 0;">إذا أردت كلمة السر الخاصه بك، تواصل مع المندوب الخاص بك</div>
 <button onclick="checkPassword()">دخول</button>
@@ -186,3 +187,4 @@ function closeModal(){ successModal.style.display='none'; }
 
 </body>
 </html>
+
