--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 <!-- نجاح التسجيل -->
 <div id="successModal" class="modal">
 <div class="modal-content">
-<h2>🎉 تم التسجيل بنجاح 🎉</h2>
+<h2>🎉 تم التسجيل بنجاح نورت المملكة😍 🎉</h2>
 <button onclick="closeModal()">إغلاق</button>
 </div>
 </div>
@@ -150,7 +150,7 @@ submitBtn.addEventListener("click", async (e)=>{
   const fieldVal = document.getElementById("field").value;
 
   if(!nameVal){ alert("الرجاء إدخال الاسم أو اسم المحل"); return; }
-  if(!phoneVal){ alert("الرجاء إدخال رقم الموبايل"); return; }
+  if(!phoneVal){ alert("الرجاء إدخال رقم الموبايل بالانجليزي"); return; }
   if(!addressVal){ alert("الرجاء إدخال العنوان"); return; }
   if(!fieldVal){ alert("الرجاء اختيار المجال"); return; }
 
@@ -187,4 +187,5 @@ function closeModal(){ successModal.style.display='none'; }
 
 </body>
 </html>
+
 
