--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@ header h2 { margin:5px 0 0; font-size:1.2em; font-weight:normal; }
 
 <div class="top-bar">🌹 اللهم صلِّ وسلم وبارك على سيدنا محمد ﷺ 🌹</div>
 <div class="blink">✨ أهلاً ومرحباً بكم في مملكة الأصليات 
-  /هنبيع ببلاش واكن الصنف مجاش✨</div>
+  /
+  هنبيع ببلاش واكن الصنف مجاش✨</div>
 
 <header>
 <h1>شركة جنة</h1>
@@ -187,5 +188,6 @@ function closeModal(){ successModal.style.display='none'; }
 
 </body>
 </html>
+
 
 
